feat(rabbitmq): Add direct queue listener which allows compatibility with existing queues (#155)
* fix(handler): simplify handleRawCommand methods and improve RabbitMessage handling

* docs(handler): add support for raw command and event handling with RabbitMQ

* feat(handler): add support for queue listeners and enhance HandlerRegistry

* docs(handler): update queue handling documentation for consistency and clarity